fix(game):JEV 키 미설정 시 게임 숨김
